--- a/public/index.html
+++ b/public/index.html
@@ -24,14 +24,15 @@
     .lightbox-overlay { position:fixed; inset:0; background:rgba(0,0,0,.85); display:none; align-items:center; justify-content:center; z-index:9999; }
     .lightbox-overlay.show { display:flex; }
     .lightbox-content { position:relative; max-width:92vw; max-height:90vh; display:flex; flex-direction:column; align-items:center; }
-    .lightbox-media { max-width:92vw; max-height:82vh; border-radius:8px; box-shadow:0 6px 24px rgba(0,0,0,.4); }
+    .lightbox-media { max-width:92vw; max-height:82vh; border-radius:8px; box-shadow:0 6px 24px rgba(0,0,0,.4); opacity:0; transition: opacity .2s ease; }
+    .lightbox-media.loaded { opacity:1; }
     .lightbox-caption { color:#eee; margin-top:10px; text-align:center; max-width:86vw; }
-    .lightbox-close { position:absolute; top:-14px; right:-14px; width:36px; height:36px; border-radius:50%; background:#000c; color:#fff; border:1px solid #fff3; display:flex; align-items:center; justify-content:center; cursor:pointer; font-size:20px; }
+    .lightbox-close { position:absolute; top:-20px; right:-20px; width:56px; height:56px; border-radius:50%; background:#000c; color:#fff; border:1px solid #fff3; display:flex; align-items:center; justify-content:center; cursor:pointer; font-size:28px; }
     .lightbox-close:hover { background:#111c; }
-    .lightbox-nav { position:absolute; top:50%; left:0; right:0; display:flex; justify-content:space-between; transform:translateY(-50%); pointer-events:none; }
-    .lightbox-btn { pointer-events:auto; width:48px; height:64px; display:flex; align-items:center; justify-content:center; color:#fff; background:transparent; border:none; cursor:pointer; opacity:.85; }
+    .lightbox-nav { position:fixed; top:50%; left:16px; right:16px; display:flex; justify-content:space-between; transform:translateY(-50%); pointer-events:none; }
+    .lightbox-btn { pointer-events:auto; width:72px; height:72px; display:flex; align-items:center; justify-content:center; color:#fff; background:rgba(255,255,255,.12); border:1px solid rgba(255,255,255,.35); border-radius:50%; cursor:pointer; opacity:.95; backdrop-filter: blur(2px); }
     .lightbox-btn:hover { opacity:1; }
-    .lightbox-btn svg { width:28px; height:28px; fill:#fff; }
+    .lightbox-btn svg { width:40px; height:40px; fill:#fff; }
     @media (max-width:600px) {
       #container { flex-direction:column; }
       #folders { width:100%; border-right:none; border-bottom:1px solid #ddd; }
@@ -49,7 +50,7 @@
     <div class="lightbox-content" role="dialog" aria-modal="true" aria-label="Image preview" id="lightboxContent">
       <button class="lightbox-close" id="lightboxClose" aria-label="Close preview">×</button>
       <img id="lightboxImg" class="lightbox-media" alt="Preview image">
-      <div id="lightboxCaption" class="lightbox-caption"></div>
+      <div id="lightboxCaption" class="lightbox-caption" aria-live="polite"></div>
       <div class="lightbox-nav">
         <button class="lightbox-btn" id="lightboxPrev" aria-label="Previous image">
           <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M15.41 7.41 14 6l-6 6 6 6 1.41-1.41L10.83 12z"/></svg>
@@ -153,13 +154,27 @@
       const it = currentItems[idx];
       if (!it) return;
       const img = document.getElementById('lightboxImg');
-      img.src = transformUrlForPreview(it.url);
-      img.alt = it.title || it.description || it.public_id || 'Preview image';
+      img.classList.remove('loaded');
       const cap = document.getElementById('lightboxCaption');
-      const parts = [];
-      if (it.title) parts.push(it.title);
-      if (it.description) parts.push(it.description);
-      cap.textContent = parts.join(' — ');
+      cap.textContent = '';
+
+      const previewUrl = transformUrlForPreview(it.url);
+      const pre = new Image();
+      pre.onload = () => {
+        img.src = previewUrl;
+        img.alt = it.title || it.description || it.public_id || 'Preview image';
+        img.classList.add('loaded');
+        const parts = [];
+        if (it.title) parts.push(it.title);
+        if (it.description) parts.push(it.description);
+        cap.textContent = parts.join(' — ');
+      };
+      pre.onerror = () => {
+        img.src = previewUrl; // still try to show
+        img.classList.add('loaded');
+        cap.textContent = it.title || it.description || '';
+      };
+      pre.src = previewUrl;
     }
 
     function openLightbox(idx) {
