--- a/public/index.html
+++ b/public/index.html
@@ -7,16 +7,21 @@
   <link rel="stylesheet" href="assets/css/styles.css">
   <style>
     :root {
-      --bg: #f3f5f9;
-      --card-bg: #ffffff;
-      --accent: #3b82f6;
-      --text: #1f2937;
-      --muted: #6b7280;
-      --border: #e5e7eb;
-      --shadow: 0 10px 30px rgba(15, 23, 42, 0.08);
-      --radius-lg: 16px;
-      --radius-md: 12px;
-      --radius-sm: 8px;
+      --ripe-olive: #4f5b44;
+      --clary-sage: #a8b79a;
+      --alabaster: #f3eee4;
+      --accessible-beige: #d1c3ac;
+      --bg: var(--alabaster);
+      --card-bg: #fdfcf8;
+      --accent: var(--ripe-olive);
+      --accent-soft: rgba(79, 91, 68, 0.08);
+      --text: #2b3527;
+      --muted: #6d7662;
+      --border: rgba(90, 103, 83, 0.22);
+      --border-strong: rgba(79, 91, 68, 0.35);
+      --radius-lg: 8px;
+      --radius-md: 6px;
+      --radius-sm: 4px;
     }
 
     * { box-sizing: border-box; }
@@ -38,7 +43,7 @@
 
     #sidebar {
       width: 260px;
-      background: var(--card-bg);
+      background: #f8f4eb;
       border-right: 1px solid var(--border);
       padding: 28px 20px;
       display: flex;
@@ -68,8 +73,8 @@
       padding: 10px 14px;
       border-radius: var(--radius-sm);
       border: 1px solid transparent;
-      background: #eef2ff;
-      color: #3730a3;
+      background: rgba(79, 91, 68, 0.12);
+      color: var(--accent);
       font-weight: 600;
       cursor: pointer;
       transition: background 0.2s ease, transform 0.2s ease;
@@ -77,12 +82,12 @@
 
     .sidebar-action:hover {
       transform: translateY(-1px);
-      background: #e0e7ff;
+      background: rgba(79, 91, 68, 0.18);
     }
 
     .sidebar-action.active {
-      background: #dbeafe;
-      border-color: rgba(37, 99, 235, 0.35);
+      background: rgba(79, 91, 68, 0.24);
+      border-color: rgba(79, 91, 68, 0.38);
     }
 
     #tagList {
@@ -106,13 +111,13 @@
     }
 
     .tag-filter:hover {
-      background: rgba(59, 130, 246, 0.12);
+      background: rgba(79, 91, 68, 0.12);
     }
 
     .tag-filter.active {
-      background: rgba(59, 130, 246, 0.15);
-      border-color: rgba(59, 130, 246, 0.4);
-      color: #1d4ed8;
+      background: rgba(79, 91, 68, 0.16);
+      border-color: rgba(79, 91, 68, 0.4);
+      color: var(--accent);
       font-weight: 600;
     }
 
@@ -129,9 +134,8 @@
       justify-content: space-between;
       align-items: flex-end;
       gap: 16px;
-      border-bottom: 1px solid rgba(148, 163, 184, 0.2);
-      background: linear-gradient(180deg, rgba(255,255,255,0.9) 0%, rgba(255,255,255,0.6) 100%);
-      backdrop-filter: blur(6px);
+      border-bottom: 1px solid rgba(90, 103, 83, 0.18);
+      background: linear-gradient(180deg, rgba(255,255,255,0.95) 0%, rgba(255,255,255,0.75) 100%);
     }
 
     #contentHeader h2 {
@@ -157,8 +161,8 @@
       gap: 6px;
       padding: 9px 14px;
       border-radius: var(--radius-sm);
-      border: 1px solid rgba(148,163,184,0.4);
-      background: rgba(255,255,255,0.8);
+      border: 1px solid rgba(90, 103, 83, 0.3);
+      background: rgba(249, 246, 240, 0.8);
       color: var(--text);
       font-weight: 500;
       cursor: pointer;
@@ -166,7 +170,7 @@
     }
 
     .button-link:hover {
-      background: #f8fafc;
+      background: rgba(79, 91, 68, 0.12);
       transform: translateY(-1px);
     }
 
@@ -180,7 +184,7 @@
     }
 
     .album-grid {
-      grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
+      grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     }
 
     .image-grid {
@@ -189,36 +193,33 @@
 
     .album-card {
       position: relative;
-      background: var(--card-bg);
+      border: 1px solid var(--border-strong);
       border-radius: var(--radius-lg);
-      box-shadow: var(--shadow);
+      background: #f4f1e7;
       overflow: hidden;
       cursor: pointer;
-      transition: transform 0.25s ease, box-shadow 0.25s ease;
-      display: flex;
-      flex-direction: column;
-      min-height: 260px;
+      transition: transform 0.2s ease, border-color 0.2s ease;
+      height: 250px;
     }
 
     .album-card:hover {
       transform: translateY(-6px);
-      box-shadow: 0 20px 40px rgba(15, 23, 42, 0.14);
+      border-color: rgba(79, 91, 68, 0.55);
     }
 
     .album-previews {
+      position: absolute;
+      inset: 0;
       display: grid;
       grid-template-columns: repeat(3, 1fr);
-      grid-auto-rows: 96px;
-      gap: 4px;
-      padding: 16px;
-      flex: 1;
-      background: linear-gradient(135deg, #f1f5f9 0%, #e0f2fe 100%);
+      grid-template-rows: repeat(2, 1fr);
+      gap: 3px;
+      background: #dfe6d4;
     }
 
     .album-thumb {
       position: relative;
-      background: rgba(148, 163, 184, 0.15);
-      border-radius: var(--radius-sm);
+      background: rgba(79, 91, 68, 0.18);
       overflow: hidden;
       display: flex;
       align-items: center;
@@ -233,57 +234,75 @@
     }
 
     .album-card:hover .album-thumb img {
-      transform: scale(1.04);
+      transform: scale(1.03);
     }
 
-    .album-thumb.placeholder::after {
-      content: "●";
-      font-size: 12px;
-      color: rgba(148, 163, 184, 0.6);
+    .album-thumb.placeholder {
+      background: rgba(79, 91, 68, 0.24);
     }
 
     .album-overlay {
-      position: relative;
-      padding: 18px 20px 16px;
-      background: linear-gradient(180deg, rgba(15, 23, 42, 0.02) 0%, rgba(15, 23, 42, 0.12) 100%);
-      backdrop-filter: blur(4px);
+      position: absolute;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      padding: 18px 20px;
+      background: linear-gradient(180deg, rgba(29, 37, 27, 0) 0%, rgba(29, 37, 27, 0.72) 60%, rgba(29, 37, 27, 0.92) 100%);
+      color: #fdfcf8;
+      display: flex;
+      flex-direction: column;
+      gap: 6px;
     }
 
     .album-name {
-      font-size: 1.1rem;
+      font-size: 1.12rem;
       font-weight: 700;
-      color: var(--text);
-      margin-bottom: 6px;
-      text-shadow: 0 1px 2px rgba(255,255,255,0.6);
+      margin: 0;
     }
 
     .album-meta {
       font-size: 0.85rem;
-      color: var(--muted);
       display: flex;
-      gap: 14px;
+      gap: 12px;
+      align-items: center;
+      color: rgba(253, 252, 248, 0.82);
+    }
+
+    .album-meta span::before {
+      content: "";
+      display: inline-block;
+      width: 4px;
+      height: 4px;
+      border-radius: 50%;
+      background: rgba(253, 252, 248, 0.6);
+      margin-right: 10px;
+    }
+
+    .album-meta span:first-child::before {
+      display: none;
     }
 
     .photo-card {
       background: var(--card-bg);
-      border-radius: var(--radius-lg);
-      box-shadow: var(--shadow);
+      border-radius: var(--radius-md);
+      border: 1px solid var(--border);
       overflow: hidden;
       display: flex;
       flex-direction: column;
-      transition: transform 0.2s ease, box-shadow 0.2s ease;
+      transition: transform 0.2s ease, border-color 0.2s ease;
     }
 
     .photo-card:hover {
-      transform: translateY(-4px);
-      box-shadow: 0 14px 32px rgba(15, 23, 42, 0.16);
+      transform: translateY(-6px);
+      border-color: rgba(79, 91, 68, 0.5);
     }
 
     .photo-thumb {
       position: relative;
       aspect-ratio: 4 / 3;
       overflow: hidden;
-      background: rgba(226, 232, 240, 0.7);
+      background: rgba(177, 188, 167, 0.35);
+      cursor: pointer;
     }
 
     .photo-thumb img {
@@ -297,23 +316,13 @@
       transform: scale(1.04);
     }
 
-    .photo-thumb-title {
-      position: absolute;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      padding: 10px 14px;
-      background: linear-gradient(180deg, rgba(15, 23, 42, 0) 0%, rgba(15, 23, 42, 0.6) 100%);
-      color: #f8fafc;
-      font-weight: 600;
-      font-size: 0.95rem;
-    }
-
     .photo-meta {
-      padding: 18px 20px;
+      padding: 18px 20px 20px;
       display: flex;
       flex-direction: column;
-      gap: 8px;
+      gap: 10px;
+      background: #ffffff;
+      border-top: 1px solid rgba(79, 91, 68, 0.15);
     }
 
     .photo-title {
@@ -359,8 +368,8 @@
       padding: 80px 20px;
       color: var(--muted);
       font-size: 1rem;
-      background: rgba(255,255,255,0.9);
-      border: 1px dashed rgba(148, 163, 184, 0.3);
+      background: rgba(255,255,255,0.85);
+      border: 1px dashed rgba(79, 91, 68, 0.35);
       border-radius: var(--radius-lg);
     }
 
@@ -372,7 +381,7 @@
     .lightbox-overlay {
       position: fixed;
       inset: 0;
-      background: rgba(15, 23, 42, 0.85);
+      background: rgba(34, 44, 32, 0.85);
       display: none;
       align-items: center;
       justify-content: center;
@@ -394,6 +403,15 @@
       gap: 16px;
     }
 
+    .lightbox-frame {
+      position: relative;
+      max-width: 92vw;
+      max-height: 70vh;
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+    }
+
     .lightbox-close {
       position: absolute;
       top: -20px;
@@ -402,19 +420,18 @@
       height: 56px;
       border-radius: 50%;
       border: none;
-      background: rgba(15, 23, 42, 0.7);
-      color: #f8fafc;
+      background: rgba(46, 58, 44, 0.85);
+      color: #f5f2ea;
       font-size: 28px;
       cursor: pointer;
       display: flex;
       align-items: center;
       justify-content: center;
-      box-shadow: 0 12px 32px rgba(15, 23, 42, 0.4);
       transition: background 0.2s ease, transform 0.2s ease;
     }
 
     .lightbox-close:hover {
-      background: rgba(15, 23, 42, 0.85);
+      background: rgba(46, 58, 44, 0.95);
       transform: translateY(-2px);
     }
 
@@ -422,7 +439,6 @@
       max-width: 92vw;
       max-height: 70vh;
       border-radius: var(--radius-lg);
-      box-shadow: 0 30px 60px rgba(15, 23, 42, 0.35);
       opacity: 0;
       transition: opacity 0.2s ease;
     }
@@ -432,24 +448,24 @@
     }
 
     .lightbox-info {
-      background: rgba(15, 23, 42, 0.7);
-      padding: 18px 24px;
+      background: rgba(34, 44, 32, 0.88);
+      padding: 20px 26px;
       border-radius: var(--radius-lg);
-      color: #f8fafc;
+      color: #f5f2ea;
       max-width: 78vw;
       backdrop-filter: blur(6px);
     }
 
     .lightbox-title {
       margin: 0;
-      font-size: 1.25rem;
+      font-size: 1.3rem;
       font-weight: 700;
     }
 
     .lightbox-desc {
-      margin: 8px 0 0;
-      font-size: 0.95rem;
-      color: rgba(248, 250, 252, 0.8);
+      margin: 10px 0 0;
+      font-size: 0.97rem;
+      color: rgba(243, 238, 230, 0.82);
     }
 
     .lightbox-tags {
@@ -460,10 +476,10 @@
     }
 
     .lightbox-nav {
-      position: fixed;
+      position: absolute;
       top: 50%;
-      left: 32px;
-      right: 32px;
+      left: 12px;
+      right: 12px;
       display: flex;
       justify-content: space-between;
       transform: translateY(-50%);
@@ -478,21 +494,21 @@
       align-items: center;
       justify-content: center;
       border-radius: 50%;
-      background: rgba(15, 23, 42, 0.35);
-      border: 1px solid rgba(255, 255, 255, 0.4);
+      background: rgba(46, 58, 44, 0.6);
+      border: 1px solid rgba(245, 242, 234, 0.35);
       cursor: pointer;
       transition: background 0.2s ease, transform 0.2s ease;
     }
 
     .lightbox-btn:hover {
-      background: rgba(15, 23, 42, 0.55);
+      background: rgba(46, 58, 44, 0.75);
       transform: translateY(-2px);
     }
 
     .lightbox-btn svg {
       width: 36px;
       height: 36px;
-      fill: #f8fafc;
+      fill: #f5f2ea;
     }
 
     @media (max-width: 1024px) {
@@ -520,8 +536,8 @@
       }
 
       .lightbox-nav {
-        left: 12px;
-        right: 12px;
+        left: 6px;
+        right: 6px;
       }
 
       .lightbox-btn {
@@ -574,20 +590,22 @@
   <div id="lightbox" class="lightbox-overlay" aria-hidden="true">
     <div class="lightbox-content" role="dialog" aria-modal="true" aria-label="Image preview" id="lightboxContent">
       <button class="lightbox-close" id="lightboxClose" aria-label="Close preview">&times;</button>
-      <img id="lightboxImg" class="lightbox-media" alt="Preview image">
+      <div class="lightbox-frame">
+        <img id="lightboxImg" class="lightbox-media" alt="Preview image">
+        <div class="lightbox-nav">
+          <button class="lightbox-btn" id="lightboxPrev" aria-label="Previous image">
+            <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M15.41 7.41 14 6l-6 6 6 6 1.41-1.41L10.83 12z"/></svg>
+          </button>
+          <button class="lightbox-btn" id="lightboxNext" aria-label="Next image">
+            <svg viewBox="0 0 24 24" aria-hidden="true"><path d="m8.59 16.59 1.41 1.41 6-6-6-6-1.41 1.41L13.17 12z"/></svg>
+          </button>
+        </div>
+      </div>
       <div class="lightbox-info" id="lightboxInfo">
         <h3 class="lightbox-title" id="lightboxTitle"></h3>
         <p class="lightbox-desc" id="lightboxDescription"></p>
         <div class="lightbox-tags" id="lightboxTags"></div>
       </div>
-    </div>
-    <div class="lightbox-nav">
-      <button class="lightbox-btn" id="lightboxPrev" aria-label="Previous image">
-        <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M15.41 7.41 14 6l-6 6 6 6 1.41-1.41L10.83 12z"/></svg>
-      </button>
-      <button class="lightbox-btn" id="lightboxNext" aria-label="Next image">
-        <svg viewBox="0 0 24 24" aria-hidden="true"><path d="m8.59 16.59 1.41 1.41 6-6-6-6-1.41 1.41L13.17 12z"/></svg>
-      </button>
     </div>
   </div>
 
@@ -644,6 +662,12 @@
 
     function getAlbumViews(id) {
       return albumViews[id] || 0;
+    }
+
+    function formatCount(value, singular, plural) {
+      const abs = Math.abs(value);
+      const word = abs === 1 ? singular : plural;
+      return `${value} ${word}`;
     }
 
     function inferAlbumName(folder) {
@@ -726,7 +750,7 @@
     function renderAlbums() {
       albumsView.innerHTML = '';
       if (!albums.length) {
-        albumsView.innerHTML = '<div class="empty-state">Альбомы пока не найдены.</div>';
+        albumsView.innerHTML = '<div class="empty-state">No albums available yet.</div>';
         return;
       }
 
@@ -736,8 +760,8 @@
 
         const previews = document.createElement('div');
         previews.className = 'album-previews';
-        const items = album.items.slice(0, 5);
-        for (let i = 0; i < 5; i++) {
+        const items = album.items.slice(0, 6);
+        for (let i = 0; i < 6; i++) {
           const item = items[i];
           const cell = document.createElement('div');
           cell.className = 'album-thumb';
@@ -761,9 +785,9 @@
         const meta = document.createElement('div');
         meta.className = 'album-meta';
         const count = document.createElement('span');
-        count.textContent = `${album.items.length} photos`;
+        count.textContent = formatCount(album.items.length, 'photo', 'photos');
         const views = document.createElement('span');
-        views.textContent = `Views: ${getAlbumViews(album.id)}`;
+        views.textContent = formatCount(getAlbumViews(album.id), 'view', 'views');
         meta.append(count, views);
 
         overlay.append(name, meta);
@@ -779,7 +803,7 @@
       imagesView.innerHTML = '';
 
       if (!items.length) {
-        imagesView.innerHTML = '<div class="empty-state">Нет изображений для отображения.</div>';
+        imagesView.innerHTML = '<div class="empty-state">No images match this filter.</div>';
         return;
       }
 
@@ -794,10 +818,6 @@
         img.alt = item.title;
         thumb.appendChild(img);
 
-        const overlay = document.createElement('div');
-        overlay.className = 'photo-thumb-title';
-        overlay.textContent = item.title;
-        thumb.appendChild(overlay);
         thumb.addEventListener('click', (event) => {
           event.preventDefault();
           openLightbox(index);
@@ -868,7 +888,7 @@
       currentContext = { type: 'album', value: albumId };
       const totalViews = incrementAlbumView(albumId);
       viewTitle.textContent = album.name;
-      viewSubtitle.textContent = `${album.items.length} photos · Views: ${totalViews}`;
+      viewSubtitle.textContent = `${formatCount(album.items.length, 'photo', 'photos')} · ${formatCount(totalViews, 'view', 'views')}`;
 
       headerActions.innerHTML = '';
       const backBtn = document.createElement('button');
@@ -898,7 +918,7 @@
       const label = tagLabels[tagCode] || tagCode;
 
       viewTitle.textContent = label;
-      viewSubtitle.textContent = `${items.length} photos with this tag`;
+      viewSubtitle.textContent = `${formatCount(items.length, 'photo', 'photos')} with this tag`;
 
       headerActions.innerHTML = '';
       const clearBtn = document.createElement('button');
