--- a/public/index.html
+++ b/public/index.html
@@ -283,9 +283,9 @@
     }
 
     .photo-card {
-      background: var(--card-bg);
+      background: #f4f1e7;
       border-radius: var(--radius-md);
-      border: 1px solid var(--border);
+      border: 1px solid var(--border-strong);
       overflow: hidden;
       display: flex;
       flex-direction: column;
@@ -294,14 +294,14 @@
 
     .photo-card:hover {
       transform: translateY(-6px);
-      border-color: rgba(79, 91, 68, 0.5);
+      border-color: rgba(79, 91, 68, 0.55);
     }
 
     .photo-thumb {
       position: relative;
       aspect-ratio: 4 / 3;
       overflow: hidden;
-      background: rgba(177, 188, 167, 0.35);
+      background: rgba(177, 188, 167, 0.32);
       cursor: pointer;
     }
 
@@ -313,52 +313,68 @@
     }
 
     .photo-card:hover .photo-thumb img {
-      transform: scale(1.04);
+      transform: scale(1.05);
     }
 
-    .photo-meta {
-      padding: 18px 20px 20px;
+    .photo-overlay {
+      position: absolute;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      padding: 16px 18px;
+      background: linear-gradient(180deg, rgba(24, 30, 22, 0) 0%, rgba(24, 30, 22, 0.62) 60%, rgba(24, 30, 22, 0.94) 100%);
+      color: #fdfcf8;
       display: flex;
       flex-direction: column;
-      gap: 10px;
-      background: #ffffff;
-      border-top: 1px solid rgba(79, 91, 68, 0.15);
+      gap: 6px;
     }
 
-    .photo-title {
-      margin: 0;
-      font-size: 1.05rem;
+    .photo-overlay-title {
       font-weight: 700;
+      font-size: 1rem;
+      margin: 0;
     }
 
-    .photo-desc {
+    .photo-overlay-desc {
+      font-size: 0.88rem;
+      color: rgba(253, 252, 248, 0.82);
       margin: 0;
-      font-size: 0.93rem;
-      color: var(--muted);
+    }
+
+    .photo-footer {
+      padding: 12px 16px 14px;
+      background: #ffffff;
+      border-top: 1px solid rgba(79, 91, 68, 0.22);
+      display: flex;
+      flex-wrap: wrap;
+      gap: 8px;
+    }
+
+    .photo-footer.hidden {
+      display: none;
     }
 
     .photo-tags {
       display: flex;
       flex-wrap: wrap;
       gap: 8px;
-      margin-top: 4px;
     }
 
     .tag-chip {
       appearance: none;
       border: none;
-      background: rgba(59, 130, 246, 0.14);
-      color: #1d4ed8;
-      padding: 4px 10px;
+      background: rgba(79, 91, 68, 0.22);
+      color: var(--accent);
+      padding: 5px 12px;
       border-radius: 999px;
-      font-size: 0.8rem;
+      font-size: 0.78rem;
       font-weight: 600;
       cursor: pointer;
       transition: background 0.2s ease, transform 0.2s ease;
     }
 
     .tag-chip:hover {
-      background: rgba(59, 130, 246, 0.25);
+      background: rgba(79, 91, 68, 0.3);
       transform: translateY(-1px);
     }
 
@@ -723,7 +739,7 @@
         const note = document.createElement('div');
         note.style.color = 'var(--muted)';
         note.style.fontSize = '0.9rem';
-        note.textContent = 'Теги появятся, как только они будут доступны.';
+        note.textContent = 'Tags will appear once they are available.';
         sidebarTagList.appendChild(note);
         return;
       }
@@ -823,31 +839,38 @@
           openLightbox(index);
         });
 
-        const meta = document.createElement('div');
-        meta.className = 'photo-meta';
+        const overlay = document.createElement('div');
+        overlay.className = 'photo-overlay';
 
-        const title = document.createElement('h3');
-        title.className = 'photo-title';
+        const title = document.createElement('div');
+        title.className = 'photo-overlay-title';
         title.textContent = item.title;
+        overlay.appendChild(title);
 
-        const desc = document.createElement('p');
-        desc.className = 'photo-desc';
-        desc.textContent = item.description || '';
-        if (!item.description) {
-          desc.classList.add('hidden');
+        if (item.description) {
+          const desc = document.createElement('div');
+          desc.className = 'photo-overlay-desc';
+          desc.textContent = item.description;
+          overlay.appendChild(desc);
         }
 
-        const tagContainer = document.createElement('div');
-        tagContainer.className = 'photo-tags';
-        item.displayTags.forEach((tag) => {
-          tagContainer.appendChild(createTagChip(tag));
-        });
+        thumb.appendChild(overlay);
 
-        meta.append(title);
-        if (item.description) meta.append(desc);
-        if (item.displayTags.length) meta.append(tagContainer);
+        const footer = document.createElement('div');
+        footer.className = 'photo-footer';
 
-        card.append(thumb, meta);
+        if (item.displayTags.length) {
+          const tagContainer = document.createElement('div');
+          tagContainer.className = 'photo-tags';
+          item.displayTags.forEach((tag) => {
+            tagContainer.appendChild(createTagChip(tag));
+          });
+          footer.appendChild(tagContainer);
+        } else {
+          footer.classList.add('hidden');
+        }
+
+        card.append(thumb, footer);
         imagesView.appendChild(card);
       });
     }
@@ -888,7 +911,7 @@
       currentContext = { type: 'album', value: albumId };
       const totalViews = incrementAlbumView(albumId);
       viewTitle.textContent = album.name;
-      viewSubtitle.textContent = `${formatCount(album.items.length, 'photo', 'photos')} · ${formatCount(totalViews, 'view', 'views')}`;
+      viewSubtitle.textContent = `${formatCount(album.items.length, 'photo', 'photos')} | ${formatCount(totalViews, 'view', 'views')}`;
 
       headerActions.innerHTML = '';
       const backBtn = document.createElement('button');
@@ -1140,3 +1163,4 @@
   </script>
 </body>
 </html>
+
