--- a/public/index.html
+++ b/public/index.html
@@ -189,6 +189,7 @@
       box-shadow: 0 10px 24px rgba(33, 49, 29, 0.2);
     }
 
+    .profile-avatar picture,
     .profile-avatar img {
       width: 100%;
       height: 100%;
@@ -219,7 +220,18 @@
       margin-left: auto;
       width: 78px;
       height: 78px;
-      opacity: 0.85;
+      opacity: 0.9;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .profile-mark picture,
+    .profile-mark img {
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
+      display: block;
     }
 
     #contentHeader {
@@ -302,13 +314,12 @@
       transform: translateY(-1px);
     }
 
-    .album-grid,
-    .image-grid {
+    .album-grid {
       flex: 1;
       overflow-y: auto;
-      padding: 24px 36px 40px;
+      padding: 24px 36px 32px;
       display: grid;
-      gap: 20px;
+      gap: 16px;
       align-items: start;
     }
 
@@ -317,7 +328,26 @@
     }
 
     .image-grid {
-      grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
+      flex: 1;
+      overflow-y: auto;
+      padding: 24px 36px 32px;
+      column-count: 4;
+      column-gap: 16px;
+    }
+
+    @media (max-width: 1280px) {
+      .image-grid {
+        column-count: 3;
+        column-gap: 14px;
+      }
+    }
+
+    @media (max-width: 900px) {
+      .image-grid {
+        column-count: 2;
+        column-gap: 14px;
+        padding: 24px;
+      }
     }
 
     .album-card {
@@ -328,7 +358,7 @@
       overflow: hidden;
       cursor: pointer;
       transition: transform 0.2s ease, border-color 0.2s ease;
-      height: 300px;
+      height: 310px;
     }
 
     .album-card:hover {
@@ -338,13 +368,16 @@
 
     .album-previews {
       position: absolute;
-      inset: 0;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 82px;
       display: grid;
       grid-template-columns: repeat(3, 1fr);
       grid-template-rows: repeat(2, 1fr);
       gap: 4px;
       background: #d4dbc6;
-      grid-auto-rows: 130px;
+      padding: 10px;
     }
 
     .album-thumb {
@@ -412,100 +445,57 @@
       display: none;
     }
 
-    .photo-card {
-      background: #f0e6d1;
-      border-radius: var(--radius-md);
-      border: 1px solid var(--border-strong);
-      overflow: hidden;
-      display: flex;
-      flex-direction: column;
-      transition: transform 0.2s ease, border-color 0.2s ease;
-    }
-
-    .photo-card:hover {
-      transform: translateY(-6px);
-      border-color: rgba(79, 91, 68, 0.55);
-    }
-
-    .photo-thumb {
+    .mosaic-item {
       position: relative;
-      aspect-ratio: 4 / 3;
+      break-inside: avoid;
+      margin-bottom: 16px;
+      border-radius: var(--radius-md);
       overflow: hidden;
-      background: rgba(150, 168, 139, 0.32);
-      cursor: pointer;
+      background: #efe3ca;
+      box-shadow: 0 10px 18px rgba(33, 49, 29, 0.14);
+      transition: transform 0.2s ease, box-shadow 0.2s ease;
+      cursor: zoom-in;
     }
 
-    .photo-thumb img {
+    .mosaic-item img {
+      display: block;
       width: 100%;
-      height: 100%;
-      object-fit: cover;
-      transition: transform 0.25s ease;
+      height: auto;
+      border-radius: inherit;
     }
 
-    .photo-card:hover .photo-thumb img {
-      transform: scale(1.05);
+    .mosaic-item:hover {
+      transform: translateY(-4px);
+      box-shadow: 0 18px 26px rgba(33, 49, 29, 0.18);
     }
 
-    .photo-overlay {
+    .mosaic-caption {
       position: absolute;
       left: 0;
       right: 0;
       bottom: 0;
-      padding: 16px 18px;
-      background: linear-gradient(180deg, rgba(24, 30, 22, 0) 0%, rgba(24, 30, 22, 0.62) 60%, rgba(24, 30, 22, 0.94) 100%);
+      padding: 14px 16px;
+      background: linear-gradient(180deg, rgba(17, 22, 16, 0) 0%, rgba(17, 22, 16, 0.82) 86%);
       color: #fdfcf8;
-      display: flex;
-      flex-direction: column;
-      gap: 6px;
+      opacity: 0;
+      transition: opacity 0.2s ease;
+      font-size: 0.82rem;
     }
 
-    .photo-overlay-title {
-      font-weight: 700;
-      font-size: 1rem;
-      margin: 0;
+    .mosaic-item:hover .mosaic-caption {
+      opacity: 1;
     }
 
-    .photo-overlay-desc {
-      font-size: 0.88rem;
-      color: rgba(253, 252, 248, 0.82);
-      margin: 0;
-    }
-
-    .photo-footer {
-      padding: 12px 16px 14px;
-      background: #ffffff;
-      border-top: 1px solid rgba(79, 91, 68, 0.22);
-      display: flex;
-      flex-wrap: wrap;
-      gap: 8px;
-    }
-
-    .photo-footer.hidden {
-      display: none;
-    }
-
-    .photo-tags {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 8px;
-    }
-
-    .tag-chip {
-      appearance: none;
-      border: none;
-      background: rgba(67, 83, 57, 0.26);
-      color: var(--accent);
-      padding: 5px 12px;
-      border-radius: 999px;
-      font-size: 0.78rem;
+    .mosaic-caption strong {
+      display: block;
       font-weight: 600;
-      cursor: pointer;
-      transition: background 0.2s ease, transform 0.2s ease;
+      margin-bottom: 4px;
     }
 
-    .tag-chip:hover {
-      background: rgba(79, 91, 68, 0.3);
-      transform: translateY(-1px);
+    .mosaic-caption span {
+      display: block;
+      color: rgba(245, 242, 234, 0.78);
+      line-height: 1.3;
     }
 
     .empty-state {
@@ -621,6 +611,24 @@
       gap: 10px;
     }
 
+    .tag-chip {
+      appearance: none;
+      border: none;
+      background: rgba(245, 242, 234, 0.18);
+      color: #f5f2ea;
+      padding: 5px 12px;
+      border-radius: 999px;
+      font-size: 0.78rem;
+      font-weight: 600;
+      cursor: pointer;
+      transition: background 0.2s ease, transform 0.2s ease;
+    }
+
+    .tag-chip:hover {
+      background: rgba(245, 242, 234, 0.32);
+      transform: translateY(-1px);
+    }
+
     .lightbox-nav {
       position: fixed;
       top: 50%;
@@ -666,9 +674,14 @@
         padding: 24px 24px 12px;
       }
 
-      .album-grid,
+      .album-grid {
+        padding: 24px;
+      }
+
       .image-grid {
         padding: 24px;
+        column-count: 3;
+        column-gap: 14px;
       }
     }
 
@@ -678,12 +691,14 @@
       }
 
       .image-grid {
-        grid-template-columns: 1fr;
+        padding: 20px;
+        column-count: 1;
+        column-gap: 12px;
       }
 
       .lightbox-nav {
-        left: 12px;
-        right: 12px;
+        left: 16px;
+        right: 16px;
       }
 
       .lightbox-btn {
@@ -723,13 +738,21 @@
     <main id="content">
       <section class="profile-hero">
         <div class="profile-avatar">
-          <img src="assets/img/amarantha-avatar.svg" alt="Portrait of amarantha with her dog">
+          <picture>
+            <source srcset="assets/img/amarantha-avatar.jpg" type="image/jpeg">
+            <img src="assets/img/amarantha-avatar.svg" alt="Portrait of amarantha with her dog">
+          </picture>
         </div>
         <div class="profile-copy">
-          <h1>amarantha’s albums for swap</h1>
+          <h1>amarantha&rsquo;s albums for swap</h1>
           <p>Hand-picked postcard sets ready for fellow collectors and mail art friends.</p>
         </div>
-        <img class="profile-mark" src="assets/img/amarantha-logo.svg" alt="amarantha wordmark">
+        <div class="profile-mark">
+          <picture>
+            <source srcset="assets/img/amarantha-logo.png" type="image/png">
+            <img src="assets/img/amarantha-logo.svg" alt="amarantha wordmark">
+          </picture>
+        </div>
       </section>
       <div id="contentHeader">
         <div class="header-left">
@@ -901,13 +924,18 @@
     function renderAlbumList() {
       albumListEl.innerHTML = '';
       const totalPhotos = albums.reduce((sum, album) => sum + album.items.length, 0);
-
-      const overviewBtn = createAlbumLink('all', 'All albums', formatCount(totalPhotos, 'photo', 'photos'));
+      const overviewBtn = createAlbumLink(
+        'all',
+        'All albums',
+        `${formatCount(albums.length, 'album', 'albums')} · ${formatCount(totalPhotos, 'photo', 'photos')}`
+      );
       overviewBtn.addEventListener('click', () => showAlbums(true));
       albumListEl.appendChild(overviewBtn);
 
       albums.forEach((album) => {
-        const btn = createAlbumLink(album.id, album.name, formatCount(album.items.length, 'photo', 'photos'));
+        const photoCount = formatCount(album.items.length, 'photo', 'photos');
+        const viewCount = formatCount(getAlbumViews(album.id), 'view', 'views');
+        const btn = createAlbumLink(album.id, album.name, `${photoCount} · ${viewCount}`);
         btn.addEventListener('click', () => showAlbum(album.id, true));
         albumListEl.appendChild(btn);
       });
@@ -1010,56 +1038,41 @@
         return;
       }
 
+      const fragment = document.createDocumentFragment();
+
       items.forEach((item, index) => {
-        const card = document.createElement('article');
-        card.className = 'photo-card';
+        const figure = document.createElement('figure');
+        figure.className = 'mosaic-item';
 
-        const thumb = document.createElement('div');
-        thumb.className = 'photo-thumb';
         const img = document.createElement('img');
-        img.src = item.thumb || item.url;
-        img.alt = item.title;
-        thumb.appendChild(img);
+        img.src = item.url;
+        img.alt = item.title || item.public_id;
+        img.loading = 'lazy';
+        figure.appendChild(img);
 
-        thumb.addEventListener('click', (event) => {
+        if (item.title || item.description) {
+          const caption = document.createElement('figcaption');
+          caption.className = 'mosaic-caption';
+          const titleEl = document.createElement('strong');
+          titleEl.textContent = item.title || item.public_id;
+          caption.appendChild(titleEl);
+          if (item.description) {
+            const descEl = document.createElement('span');
+            descEl.textContent = item.description;
+            caption.appendChild(descEl);
+          }
+          figure.appendChild(caption);
+        }
+
+        figure.addEventListener('click', (event) => {
           event.preventDefault();
           openLightbox(index);
         });
 
-        const overlay = document.createElement('div');
-        overlay.className = 'photo-overlay';
-
-        const title = document.createElement('div');
-        title.className = 'photo-overlay-title';
-        title.textContent = item.title;
-        overlay.appendChild(title);
-
-        if (item.description) {
-          const desc = document.createElement('div');
-          desc.className = 'photo-overlay-desc';
-          desc.textContent = item.description;
-          overlay.appendChild(desc);
-        }
-
-        thumb.appendChild(overlay);
-
-        const footer = document.createElement('div');
-        footer.className = 'photo-footer';
-
-        if (item.displayTags.length) {
-          const tagContainer = document.createElement('div');
-          tagContainer.className = 'photo-tags';
-          item.displayTags.forEach((tag) => {
-            tagContainer.appendChild(createTagChip(tag));
-          });
-          footer.appendChild(tagContainer);
-        } else {
-          footer.classList.add('hidden');
-        }
-
-        card.append(thumb, footer);
-        imagesView.appendChild(card);
+        fragment.appendChild(figure);
       });
+
+      imagesView.appendChild(fragment);
     }
 
     function createTagChip(tag) {
