Change logo format from JPG to PNG

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <title>Card Gallery</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="stylesheet" href="assets/css/styles.css">
-  <link rel="icon" type="image/jpeg" href="assets/img/amarantha-logo.jpg">
+  <link rel="icon" type="image/jpeg" href="assets/img/amarantha-logo.png">
   <link rel="icon" type="image/svg+xml" href="assets/img/amarantha-logo.svg">
   <style>
     :root {
@@ -744,7 +744,7 @@
           <p>A living collection of postcards ready to travel.</p>
         </div>
         <div class="profile-mark">
-          <img src="assets/img/amarantha-logo.jpg" alt="amarantha wordmark" onerror="this.onerror=null;this.src='assets/img/amarantha-logo.svg';">
+          <img src="assets/img/amarantha-logo.png" alt="amarantha wordmark" onerror="this.onerror=null;this.src='assets/img/amarantha-logo.svg';">
         </div>
       </section>
       <div id="contentHeader">
